Demo 1/Note.txt
History

- 2009

V8 Engine - Chrome
			Compile JS Code

MS Edge - Chakra
Firefox - SpiderMonkey


Ryan Dahl

Installing Node

>node -v

v8.17.0

nvm (Node Version Manager)


Node Module System
------------------

JS Module?

Every file that is having .js extension is a module.



How to execute Node program?
> node {file_name.js}

module keyword

Global object & Window object
-----------------------------

window
setTimeOut()
setInterval()
window.console.log()

global keyword

Working with Modules
--------------------

module.exports = yourObject;


require() function.


Module wrapper function
-----------------------

var x=;


Error in Node 20:
var x=;
      ^

SyntaxError: Unexpected token ';'
    at wrapSafe (node:internal/modules/cjs/loader:1281:20)
    at Module._compile (node:internal/modules/cjs/loader:1321:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1416:10)
    at Module.load (node:internal/modules/cjs/loader:1208:32)
    at Module._load (node:internal/modules/cjs/loader:1024:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:174:12)
    at node:internal/main/run_main_module:28:49

Node.js v20.14.0


Error in Node 8:

(function (exports, require, module, __filename, __dirname) { var x=;
                                                                    ^

SyntaxError: Unexpected token ;
    at createScript (vm.js:80:10)
    at Object.runInThisContext (vm.js:139:10)
    at Module._compile (module.js:617:28)
    at Object.Module._extensions..js (module.js:664:10)
    at Module.load (module.js:566:32)
    at tryModuleLoad (module.js:506:12)
    at Function.Module._load (module.js:498:3)
    at Function.Module.runMain (module.js:694:10)
    at startup (bootstrap_node.js:204:16)
    at bootstrap_node.js:625:3



Advantages of Node:

- superfast and highly scalable
- JS based
- cleaner code and more consistent codebase
- large ecosystem of open source libs


- Built twice faster
- 33% fewer lines code
- 40% fewer line
- 2x requests / sec
- 35% faster response time







MERN
MEAN
MEVN




